QUARTZ-66 [Feat] 티켓 생성 로직 구현 API v0.1 line 25